--- a/frontend.yml
+++ b/frontend.yml
@@ -7,25 +7,29 @@
         name: nginx
         state: installed
 
+    - name: copy nginx Reverse proxy conf file
+      ansible.builtin.copy:
+        src: expense.conf
+        dest: /etc/nginx/default.d/expense.conf
 
+    - name: Clean Old content
+      ansible.builtin.file:
+        path: /usr/share/nginx/html
+        state: absent
 
+    - name: Creating Directory
+      ansible.builtin.file:
+        path: /usr/share/nginx/html
+        state: directory
 
+    - name: Download and Extract App content
+      ansible.builtin.unarchive:
+        src: https://expense-artifacts.s3.amazonaws.com/expense-frontend-v2.zip
+        dest: /usr/local/bin
+        remote_src: yes
 
-#app_dir=/usr/share/nginx/html
-#component=frontend
-#
-#
-#print_Head "Install Nginx"
-#dnf install nginx unzip -y &>>$LOG
-#print_Status $0
-#
-#print_Head "copy nginx Reverse proxy conf file"
-#cp expense.conf /etc/nginx/default.d/expense.conf &>>$LOG
-#print_Status $0
-#
-#app_pre_req
-#
-#print_Head "Start Nginx"
-#systemctl enable nginx &>>$LOG
-#systemctl start nginx &>>$LOG
-#print_Status $0
+    - name: Starting Nginx
+      ansible.builtin.systemd_service:
+        name: nginx
+        state: started
+        enabled: true
