--- a/backend.yml
+++ b/backend.yml
@@ -2,48 +2,48 @@
   hosts: all
   become: yes
   tasks:
-    - name: Disable nodejs
+    - name: Disable default NodeJS Version Module
       ansible.builtin.shell: dnf module disable nodejs -y
 
-    - name: Enable nodejs
-      ansible.builtin.shell: dnf module enable nodejs:20 -y
+    - name: Enable NodeJS module for V20
+      ansible.builtin.shell: dnf module disable nodejs -y
 
-    - name: Install nodejs
+    - name: Install NodeJS
       ansible.builtin.dnf:
         name: nodejs
         state: installed
 
-    - name: Add user
+    - name: Adding Application User
       ansible.builtin.user:
         name: expense
 
-    - name: Copy service file to Systemd
-      ansible.builtin.copy:
-        src: backend.service
-        dest: /etc/systemd/system/backend.service
-
-    - name: Clean Old content
+    - name: Clean the Old Content
       ansible.builtin.file:
         path: /app
         state: absent
 
-    - name: Creating Directory
+    - name: Create App Directory
       ansible.builtin.file:
         path: /app
         state: directory
 
-    - name: Download and Extract App content
+    - name: Download and Extract App Content
       ansible.builtin.unarchive:
-        src:  https://expense-artifacts.s3.amazonaws.com/expense-backend-v2.zip
+        src: https://expense-artifacts.s3.amazonaws.com/expense-backend-v2.zip
         dest: /app
         remote_src: yes
 
     - name: Download NodeJS Dependencies
       community.general.npm:
-          path: /app
-          state: latest
+        path: /app
+        state: latest
 
-    - name: Install Mysql client
+    - name: Copy Backend Service file
+      ansible.builtin.copy:
+        src: backend.service
+        dest: /etc/systemd/system/backend.service
+
+    - name: Install mysql
       ansible.builtin.dnf:
         name: mysql
         state: installed
@@ -52,14 +52,14 @@
       community.mysql.mysql_db:
         state: import
         name: all
+        target: /app/schema/backend.sql
         login_user: root
         login_password: ExpenseApp@1
-        target: /app/schema/backend.sql
         login_host: mysql-dev.mohdshuja.com
 
-    - name: Starting Backend
+    - name: Start Backend Service
       ansible.builtin.systemd_service:
         name: backend
-        state: installed
-        enabled: true
-        daemon_reload: true
+        state: restarted
+        enabled: yes
+        daemon_reload: yes
