--- a/mysql.yml
+++ b/mysql.yml
@@ -1,14 +1,18 @@
-- name: Install MySQL Server
-  ansible.builtin.dnf:
-    name: mysql-server
-    state: installed
+- name: MySQL Setup
+  hosts: all
+  become: true
+  tasks:
+    - name: Install MySQL Server
+      ansible.builtin.dnf:
+        name: mysql-server
+        state: installed
 
-- name: Setup MySQL Root password
-  ansible.builtin.shell: mysql_secure_installation --set-root-pass ExpenseApp@1
+    - name: Setup MySQL Root password
+      ansible.builtin.shell: mysql_secure_installation --set-root-pass ExpenseApp@1
 
-- name: Start MySQL
-  ansible.builtin.systemd_service:
-    name: mysqld
-    state: started
-    daemon_reload: true
+    - name: Start MySQL
+      ansible.builtin.systemd_service:
+        name: mysqld
+        state: started
+        daemon_reload: true
 
