cryptography pip module installed

--- a/backend.yml
+++ b/backend.yml
@@ -45,7 +45,9 @@
 
     - name: Install Python mysql
       ansible.builtin.pip:
-        name: PyMySQL
+        name:
+          - PyMySQL
+          - cryptography
         executable: pip3.9
 
     - name: Load Schema
