--- a/roles/backend/tasks/main.yml
+++ b/roles/backend/tasks/main.yml
@@ -13,21 +13,10 @@
   ansible.builtin.user:
     name: expense
 
-- name: Clean the Old Content
-  ansible.builtin.file:
-    path: /app
-    state: absent
-
-- name: Create App Directory
-  ansible.builtin.file:
-    path: /app
-    state: directory
-
-- name: Download and Extract App Content
-  ansible.builtin.unarchive:
-    src: https://expense-artifacts.s3.amazonaws.com/expense-backend-v2.zip
-    dest: /app
-    remote_src: yes
+- name: Run tasks/app-pre-req.yaml instead of 'main'
+  ansible.builtin.import_role:
+    name: common
+    tasks_from: app-pre-req
 
 - name: Download NodeJS Dependencies
   community.general.npm:
