--- a/roles/mysql/tasks/main.yml
+++ b/roles/mysql/tasks/main.yml
@@ -3,8 +3,6 @@
     name: mysql-server
     state: installed
 
-- name: Setup MySQL Root password
-  ansible.builtin.shell: mysql_secure_installation --set-root-pass ExpenseApp@1
 
 - name: Start MySQL
   ansible.builtin.systemd_service:
@@ -12,3 +10,26 @@
     state: started
     daemon_reload: true
 
+
+- name: Install Python mysql
+  ansible.builtin.pip:
+    name:
+      - PyMySQL
+      - cryptography
+    executable: pip3.9
+
+- name: Load Schema
+  community.mysql.mysql_info:
+    target: /app/schema/backend.sql
+    login_user: root
+    login_password: ExpenseApp@1
+    filter: version
+    login_host: mysql-dev.mohdshuja.com
+  register: mysql_root_password
+
+- name: password
+  debug:
+    msg: "{{ mysql_root_password }}"
+
+- name: Setup MySQL Root password
+  ansible.builtin.shell: mysql_secure_installation --set-root-pass ExpenseApp@1
