--- a/roles/backend/templates/backend.service
+++ b/roles/backend/templates/backend.service
@@ -3,7 +3,7 @@ Description = Backend Service
 
 [Service]
 User=expense
-Environment=DB_HOST="mysql-dev.mohdshuja.com"
+Environment=DB_HOST="mysql-{{env}}.mohdshuja.com"
 ExecStart=/bin/node /app/index.js
 SyslogIdentifier=backend
 
