mysql_root_password

--- a/roles/mysql/tasks/main.yml
+++ b/roles/mysql/tasks/main.yml
@@ -26,6 +26,14 @@
     login_host: mysql-dev.mohdshuja.com
   register: mysql_root_password
 
+- name: Check the DB connection with our password
+  community.mysql.mysql_info:
+    login_user: root
+    login_password: ExpenseApp@1
+    login_host: mysql-dev.mohdshuja.com
+    filter: version
+  register:  mysql_root_password
+
 - name: password
   debug:
     msg: "{{ mysql_root_password }}"
