commented mysql_info

--- a/roles/mysql/tasks/main.yml
+++ b/roles/mysql/tasks/main.yml
@@ -8,27 +8,27 @@
   ansible.builtin.systemd_service:
     name: mysqld
     state: started
-    daemon_reload: true
+    enabled: yes
 
 
-- name: Install Python mysql
-  ansible.builtin.pip:
-    name:
-      - PyMySQL
-      - cryptography
-    executable: pip3.9
-
-- name: Check the DB connection with our password
-  community.mysql.mysql_info:
-    login_user: root
-    login_password: ExpenseApp@1
-    login_host: mysql-dev.mohdshuja.com
-    filter: version
-  register:  mysql_root_password
-
-- name: password
-  debug:
-    msg: "{{ mysql_root_password }}"
+#- name: Install Python mysql
+#  ansible.builtin.pip:
+#    name:
+#      - PyMySQL
+#      - cryptography
+#    executable: pip3.9
+#
+#- name: Check the DB connection with our password
+#  community.mysql.mysql_info:
+#    login_user: root
+#    login_password: ExpenseApp@1
+#    login_host: mysql-dev.mohdshuja.com
+#    filter: version
+#  register:  mysql_root_password
+#
+#- name: password
+#  debug:
+#    msg: "{{ mysql_root_password }}"
 
 - name: Setup MySQL Root password
   ansible.builtin.shell: mysql_secure_installation --set-root-pass ExpenseApp@1
