--- a/roles/common/tasks/main.yml
+++ b/roles/common/tasks/main.yml
@@ -1,4 +1,10 @@
 - name: Setup Prompt
   ansible.builtin.shell: set-prompt {{ component}}-{{ env }}
 
+- name: Import Prometheus Role for node_exporter
+  ansible.builtin.import_role:
+   name: prometheus
+   tasks_from: node_exporter
+
+
 
