added missing node_expoter exutable

--- a/roles/prometheus/templates/node_exporter.service
+++ b/roles/prometheus/templates/node_exporter.service
@@ -4,7 +4,7 @@ Description = node_exporter Service
 [Service]
 User=bin
 
-ExecStart=/opt/node_exporter-{{ version }}.linux-amd64
+ExecStart=/opt/node_exporter-{{ version }}.linux-amd64/node_exporter
 
 SyslogIdentifier=node_exporter
 
