--- a/roles/backend/templates/backend.service
+++ b/roles/backend/templates/backend.service
@@ -3,8 +3,12 @@ Description = Backend Service
 
 [Service]
 User=expense
+WorkingDirectory=/app
 Environment=DB_HOST="mysql-{{env}}.mohdshuja.com"
-ExecStart=/bin/node /app/index.js
+Environment=NEW_RELIC_APP_NAME=backend
+Environment=NEW_RELIC_LICENSE_KEY={{ NEWRELIC_KEY }}
+ExecStart=/bin/node -r newrelic /app/index.js
+
 SyslogIdentifier=backend
 
 [Install]
