add expense user and group for directory

--- a/roles/common/tasks/app-pre-req.yml
+++ b/roles/common/tasks/app-pre-req.yml
@@ -7,6 +7,8 @@
   ansible.builtin.file:
     path: "{{ app_loc }}"
     state: directory
+    owner: "{{ app_user }}"
+    group: "{{ app_user }}"
 
 - name: Download and Extract App content
   ansible.builtin.unarchive:
