--- a/roles/backend/templates/backend.service
+++ b/roles/backend/templates/backend.service
@@ -2,7 +2,7 @@
 Description = Backend Service
 
 [Service]
-User=expense
+User={{ app_user }}
 WorkingDirectory=/app
 Environment=DB_HOST="mysql-{{env}}.mohdshuja.com"
 Environment=NEW_RELIC_APP_NAME=backend
